@@ -1,6 +1,7 @@
 2020-09-23 Wiley E. Hill <wileyhill@gmail.com>
 
-    * src/s_netlist.c: Rename nl_current -> nl_iter in s_netlist_find_object.
+    * src/s_netlist.c: Rename nl_current -> nl_iter in s_netlist_find_object
+      and add function documentation.
 
 2020-06-12 Wiley E. Hill <wileyhill@gmail.com>
 
